--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -16,6 +16,7 @@
 \input{pages/title}
 \input{pages/disclaimer}
 \input{pages/acknowledgements}
+\input{pages/kurzfassung}
 \input{pages/abstract}
 \microtypesetup{protrusion=false}
 \tableofcontents{}
@@ -32,6 +33,7 @@
 \listoffigures{}
 \listoftables{}
 \microtypesetup{protrusion=true}
+\nocite{*}
 \printbibliography{}
 
 \end{document}
