--- a/Latex/pages/disclaimer.tex
+++ b/Latex/pages/disclaimer.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 \vspace*{0.8\textheight}
 \noindent
-I assure the single handed composition of this \MakeLowercase{\getDoctype{}} only supported by declared resources.
+I assure the single handed composition of this \MakeLowercase{\getDoctype{}} is only supported by declared resources.
 
 \vspace{15mm}
 \noindent
