--- a/Latex/settings/commands.tex
+++ b/Latex/settings/commands.tex
@@ -1,12 +1,12 @@
 % Basic information for cover & title page
 \newcommand*{\getUniversity}{Technische Universit\"at M\"unchen}
 \newcommand*{\getFaculty}{Fakult\"at f\"ur Informatik}
-\newcommand*{\getTitle}{Tangram-Generator}
-\newcommand*{\getTitleGer}{Tangram-Generator}
+\newcommand*{\getTitle}{Random Generation of Tangrams}
+\newcommand*{\getTitleGer}{Zuf\"allige Generierung von Tangrams}
 \newcommand*{\getAuthor}{Wiebke K\"opp}
-\newcommand*{\getDoctype}{Interdisciplinary Project  in Mathematics}
+\newcommand*{\getDoctype}{Interdisciplinary Project in Mathematics}
 \newcommand*{\getSupervisor}{Prof. Dr. Dr. J\"urgen Richter-Gebert}
-\newcommand*{\getAdvisor}{Dipl.-Inf. Martin  von Gagern}
+\newcommand*{\getAdvisor}{Dipl.-Inf. Martin von Gagern}
 \newcommand*{\getSubmissionDate}{March 31, 2015}
 \newcommand*{\getSubmissionLocation}{Munich}
 
