--- a/Latex/settings/settings.tex
+++ b/Latex/settings/settings.tex
@@ -1,4 +1,5 @@
 \bibliography{bibliography/literature}
+\bibliography{bibliography/webpages}
 
 \setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
 \linespread{1.05} % adjust line spread for mathpazo font
