Added Online Resources After Sorting Them

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,12 +2,83 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-01-26 13:28:55 +0100 
+%% Created for Wiebke Koepp at 2015-02-01 21:12:07 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@online{koeller99,
+	Author = {J{\"u}rgen K{\"o}ller},
+	Date-Added = {2015-02-01 20:09:37 +0000},
+	Date-Modified = {2015-02-01 20:12:07 +0000},
+	Title = {Mathematische Basteleien - Tangram},
+	Url = {http://www.mathematische-basteleien.de/tangram.htm},
+	Urlday = {01},
+	Urlmonth = {02},
+	Urlyear = {2015},
+	Year = {1999}}
+
+@online{coffin98,
+	Author = {Stewart T. Coffin},
+	Date-Added = {2015-02-01 20:05:48 +0000},
+	Date-Modified = {2015-02-01 20:09:08 +0000},
+	Editor = {John Rausch},
+	Title = {The Puzzling World of Polyhedral Dissections - Chapter 1 - Two-Dimensional Dissections},
+	Url = {http://www.johnrausch.com/PuzzlingWorld/chap01.htm},
+	Urlday = {01},
+	Urlmonth = {02},
+	Urlyear = {2015},
+	Year = {1998}}
+
+@online{bell12,
+	Author = {Bryan Bell},
+	Date-Added = {2015-02-01 19:41:24 +0000},
+	Date-Modified = {2015-02-01 19:42:30 +0000},
+	Day = {24},
+	Month = {09},
+	Title = {Solving Tangrams Using JTS},
+	Url = {https://bjbell.wordpress.com/2012/09/24/solving-tangrams-using-jts/},
+	Urlday = {01},
+	Urlmonth = {02},
+	Urlyear = {2015},
+	Year = {2012}}
+
+@article{eisenman64,
+	Author = {Eisenman,Russell and Coffee,Sandra},
+	Date-Added = {2015-02-01 18:50:33 +0000},
+	Date-Modified = {2015-02-01 18:52:27 +0000},
+	Journaltitle = {Journal of Psychology},
+	Pages = {375--378},
+	Title = {Aesthetic Preferences of Art Students and Mathematics Students},
+	Volume = {58},
+	Year = {1964},
+	Bdsk-Url-1 = {http://search.proquest.com/docview/1290608780?accountid=14439}}
+
+@article{mcmanus80,
+	Author = {Ian Christopher McManus},
+	Date-Added = {2015-02-01 18:39:31 +0000},
+	Date-Modified = {2015-02-01 18:42:27 +0000},
+	Journaltitle = {British Journal of Psychology},
+	Number = {4},
+	Pages = {505--524},
+	Title = {The Aesthetics of Simple Figures},
+	Volume = {71},
+	Year = {1980},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.2044-8295.1980.tb01763.x}}
+
+@online{ringel02,
+	Author = {Claus Michael Ringel},
+	Date-Added = {2015-02-01 18:12:08 +0000},
+	Date-Modified = {2015-02-01 18:23:36 +0000},
+	Organization = {Universit{\"a}t Bielefeld},
+	Title = {Denkspiele aus aller Welt - Tangram},
+	Url = {http://www.mathematik.uni-bielefeld.de/~ringel/puzzle/puzzle02/tangram.htm},
+	Urlday = {01},
+	Urlmonth = {02},
+	Urlyear = {2015},
+	Year = {2002}}
 
 @online{cai08,
 	Annote = {- description of three ways to calculate the probability of the pattern, each requires to know all possible solutions to the pattern
@@ -336,11 +407,10 @@
 @article{joshi11,
 	Author = {Joshi, Dhiraj and Datta, Ritendra and Fedorovskaya, Elena and Luong, Quang-Tuan and Wang, James Z and Li, Jia and Luo, Jiebo},
 	Date-Added = {2015-01-19 20:06:25 +0000},
-	Date-Modified = {2015-01-19 20:06:38 +0000},
-	Journal = {Signal Processing Magazine, IEEE},
+	Date-Modified = {2015-02-01 18:54:04 +0000},
+	Journaltitle = {Signal Processing Magazine},
 	Number = {5},
 	Pages = {94--115},
-	Publisher = {IEEE},
 	Title = {Aesthetics and Emotions in Images},
 	Volume = {28},
 	Year = {2011}}
